# holler

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html
.github/workflows/: build.yml
assets/: Holler.icns
crates/holler-app/: Cargo.toml  build.rs
crates/holler-app/src/: diagnostics.rs  font.rs  icons.rs  main.rs  overlay.rs  permissions.rs  settings.rs  speech.rs  status_popup.rs  toast.rs
crates/holler-app/src/settings/: mod.rs  ui.rs
crates/holler-audio/: Cargo.toml
crates/holler-audio/src/: lib.rs
crates/holler-config/: Cargo.toml
crates/holler-config/src/: lib.rs  ptt.rs  secrets.rs
crates/holler-inject/: Cargo.toml
crates/holler-inject/src/: lib.rs
crates/holler-store/: Cargo.toml
crates/holler-store/src/: lib.rs
crates/holler-stt/: Cargo.toml
crates/holler-stt/src/: deepgram.rs  lib.rs  openai.rs  secrets.rs
crates/holler-tts/: Cargo.toml  build.rs
crates/holler-tts/src/: deepgram.rs  factory.rs  lib.rs  native.rs  openai.rs  playback.rs  secrets.rs
docs/: AUTOMODE.md  DECISIONS.md  DISCOVERIES.md  LOOP_PROGRESS.md  PLAN.md  SIGNING.md
docs/research/: 01-existing-solutions.md  02-rust-stack.md  03-stt-comparison.md  04-text-injection.md
scripts/: bundle-macos.sh  bundle-windows.ps1  ensure-dev-signing-identity.sh  gen-icons.py  holler.entitlements  make-dmg.sh
