[package]
name = "holler-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Holler — push-to-talk dictation for your agents. Tray + global-hotkey loop driving the capture → (STT) pipeline."

# The product binary is just `holler`.
[[bin]]
name = "holler"
path = "src/main.rs"

[dependencies]
holler-audio = { path = "../holler-audio" }
holler-stt = { path = "../holler-stt" }
winit.workspace = true
# `muda` (menus) is re-exported as `tray_icon::menu`, so we depend on it only
# transitively — this keeps the menu/tray versions locked in lockstep.
tray-icon.workspace = true
global-hotkey.workspace = true
mimalloc.workspace = true
arboard = "3.6.1"
holler-inject = { path = "../holler-inject" }
holler-store = { path = "../holler-store" }
holler-config = { path = "../holler-config" }
softbuffer = "0.4.8"
egui = "0.34.3"
egui_glow = { version = "0.34.3", features = ["winit"] }
glutin = "0.32.3"
glutin-winit = "0.5.0"
