[package]
name = "holler-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Holler — push-to-talk dictation for your agents. Tray + global-hotkey loop driving the capture → (STT) pipeline."

# The product binary is just `holler`.
[[bin]]
name = "holler"
path = "src/main.rs"

[dependencies]
holler-audio = { path = "../holler-audio" }
holler-stt = { path = "../holler-stt" }
winit.workspace = true
# `muda` (menus) is re-exported as `tray_icon::menu`, so we depend on it only
# transitively — this keeps the menu/tray versions locked in lockstep.
tray-icon.workspace = true
global-hotkey.workspace = true
mimalloc.workspace = true
arboard = "3.6.1"
holler-inject = { path = "../holler-inject" }
holler-store = { path = "../holler-store" }
holler-config = { path = "../holler-config" }
softbuffer = "0.4.8"
egui = "0.34.3"
# "clipboard" wires egui-winit's arboard integration so Cmd+V / Ctrl+V land as
# egui paste events (without it, text fields silently ignore paste). egui_glow
# pulls egui-winit with default-features off, so we must opt in explicitly.
egui_glow = { version = "0.34.3", features = ["winit", "clipboard"] }
glutin = "0.32.3"
glutin-winit = "0.5.0"
tts = "0.26.3"

# macOS-only: query AVCaptureDevice for live microphone authorization status
# (permissions.rs). Pinned to the objc2 0.6 / objc2-foundation 0.3 versions
# winit already brings in transitively, so this adds no new crates to compile.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"

# Windows-only: embed the .exe icon + version resource at build time (build.rs).
# Gated to a Windows host, so it's never fetched/compiled on macOS/Linux builds.
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
