[package]
name = "holler-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Holler configuration: TOML config (PTT combo, STT provider/model, injection mode) plus API keys in a separate secrets.toml, in the OS config dir."

[dependencies]
directories = "6.0.0"
global-hotkey.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
