[package]
name = "holler-stt"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Holler speech-to-text: provider-agnostic SttProvider trait (local Whisper + cloud OpenAI/Deepgram, BYOK)."

[dependencies]
hound = "3.5.1"
keyring = { version = "^3", default-features = false, features = ["apple-native", "windows-native"] }
reqwest = { version = "0.13.4", features = ["blocking", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
