[package]
name = "holler-tts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Holler text-to-speech: provider-agnostic TtsProvider trait (native macOS say/AVSpeechSynthesizer offline default + cloud OpenAI TTS, BYOK)."

[dependencies]
holler-config = { path = "../holler-config" }
# Cloud (OpenAI) backend: blocking HTTP + JSON error parsing, mirroring
# holler-stt. Versions pinned to the workspace-shared resolutions (see
# docs/DISCOVERIES.md — verified against crates.io 2026-06-08).
reqwest = { version = "0.13.4", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
# AVSpeechSynthesis = native backend; AVAudioPlayer = in-process playback of the
# WAV bytes the cloud backend gets from OpenAI (reuses the AVFoundation link).
objc2-avf-audio = { version = "0.3", default-features = false, features = ["AVSpeechSynthesis", "AVAudioPlayer"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString", "NSRunLoop", "NSDate", "NSData", "NSError"] }
